@@ -1,5 +1,6 @@
 package com.example.marketgui;
 
+import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -78,8 +79,8 @@ public class ShopCommand implements CommandExecutor, TabCompleter {
         }
         if (args.length < 2) {
             player.sendMessage("§cИспользование:");
-            player.sendMessage("§7/shop add <материал> <кол-во> [money <сумма>] [категория]");
-            player.sendMessage("§7/shop add money <сумма> [категория]");
+            player.sendMessage("§7/shop add <материал> <кол-во> [money <сумма>] [категория] [for <игрок>]");
+            player.sendMessage("§7/shop add money <сумма> [категория] [for <игрок>]");
             player.sendMessage("§7Держите предмет в руке, которым хотите торговать.");
             return true;
         }
@@ -94,10 +95,12 @@ public class ShopCommand implements CommandExecutor, TabCompleter {
         int priceAmount = 0;
         double moneyPrice = 0.0;
         String categoryName = null;
+        UUID targetPlayer = null;
         int index = 1;
 
+        // Парсим аргументы
         if (args[index].equalsIgnoreCase("money")) {
-            // /shop add money <сумма> [категория]
+            // /shop add money <сумма> ...
             if (args.length < 3) {
                 player.sendMessage("§cУкажите сумму: /shop add money <сумма>");
                 return true;
@@ -111,7 +114,7 @@ public class ShopCommand implements CommandExecutor, TabCompleter {
             }
             index += 2;
         } else {
-            // /shop add <материал> <кол-во> [money <сумма>] [категория]
+            // /shop add <материал> <кол-во> ...
             if (args.length < 3) {
                 player.sendMessage("§cУкажите материал и количество: /shop add <материал> <кол-во>");
                 return true;
@@ -130,6 +133,7 @@ public class ShopCommand implements CommandExecutor, TabCompleter {
             }
             index += 2;
 
+            // Дополнительно может быть money
             if (index < args.length && args[index].equalsIgnoreCase("money")) {
                 if (index + 1 >= args.length) {
                     player.sendMessage("§cУкажите сумму после money.");
@@ -146,22 +150,59 @@ public class ShopCommand implements CommandExecutor, TabCompleter {
             }
         }
 
-        if (index < args.length) {
+        // Категория (необязательно)
+        if (index < args.length && !args[index].equalsIgnoreCase("for")) {
             categoryName = args[index];
             if (shopManager.getCategory(categoryName) == null) {
                 player.sendMessage("§cКатегория не найдена: " + categoryName);
                 return true;
             }
-        } else {
+            index++;
+        } else if (categoryName == null) {
             categoryName = shopManager.getCategoryForMaterial(hand.getType());
+        }
+
+        // Параметр for (необязательно)
+        if (index < args.length && args[index].equalsIgnoreCase("for")) {
+            if (index + 1 >= args.length) {
+                player.sendMessage("§cУкажите ник игрока после for.");
+                return true;
+            }
+            String targetName = args[index + 1];
+            Player target = Bukkit.getPlayer(targetName);
+            if (target == null) {
+                player.sendMessage("§cИгрок не в сети: " + targetName);
+                return true;
+            }
+            if (target.getUniqueId().equals(player.getUniqueId())) {
+                player.sendMessage("§cНельзя указать самого себя.");
+                return true;
+            }
+            targetPlayer = target.getUniqueId();
+            index += 2;
+        }
+
+        // Если категория не была указана, а for указан, и после for ничего нет – всё ок
+
+        // Проверяем, что у нас есть хоть какая-то цена
+        if (priceMaterial == null && moneyPrice <= 0) {
+            player.sendMessage("§cВы должны указать цену (материал/количество или money).");
+            return true;
         }
 
         ItemStack toSell = hand.clone();
         player.getInventory().setItemInMainHand(null);
 
-        shopManager.addListing(player, toSell, priceMaterial, priceAmount, moneyPrice, categoryName);
+        shopManager.addListing(player, toSell, priceMaterial, priceAmount, moneyPrice, categoryName, targetPlayer);
 
         player.sendMessage("§aТовар выставлен на продажу!");
+        if (targetPlayer != null) {
+            Player target = Bukkit.getPlayer(targetPlayer);
+            if (target != null && target.isOnline()) {
+                target.sendMessage("§eИгрок §f" + player.getName() + "§e выставил для вас товар в магазине!");
+                target.sendMessage("§eИспользуйте §f/shop§e, чтобы посмотреть.");
+            }
+        }
         player.sendMessage("§7Категория: §f" + categoryName);
         StringBuilder priceDesc = new StringBuilder();
         if (priceMaterial != null && priceAmount > 0) {
@@ -172,6 +213,10 @@ public class ShopCommand implements CommandExecutor, TabCompleter {
             priceDesc.append(plugin.getEconomyManager().format(moneyPrice));
         }
         player.sendMessage("§7Цена: §f" + priceDesc);
+        if (targetPlayer != null) {
+            String targetName = Bukkit.getOfflinePlayer(targetPlayer).getName();
+            player.sendMessage("§7Для игрока: §f" + (targetName != null ? targetName : targetPlayer.toString()));
+        }
         shopGUI.openSellerMenu(player);
         return true;
     }
@@ -194,9 +239,30 @@ public class ShopCommand implements CommandExecutor, TabCompleter {
             return options;
         }
         if (args[0].equalsIgnoreCase("add")) {
-            // Подсказка слова money
-            return List.of("money");
+            // Подсказки для ключевых слов money, for
+            if (args.length >= 2) {
+                // Проверяем, не ввели ли мы уже for
+                boolean hasFor = false;
+                for (String arg : args) {
+                    if (arg.equalsIgnoreCase("for")) hasFor = true;
+                }
+                if (hasFor) {
+                    // Если уже есть for, подсказываем имена игроков
+                    String lastArg = args[args.length - 1];
+                    return Bukkit.getOnlinePlayers().stream()
+                            .map(Player::getName)
+                            .filter(n -> n.toLowerCase(Locale.ROOT).startsWith(lastArg.toLowerCase(Locale.ROOT)))
+                            .collect(Collectors.toList());
+                }
+                // Иначе предлагаем money и for
+                List<String> hints = new ArrayList<>();
+                if (!args[args.length - 1].equalsIgnoreCase("money") && !args[args.length - 1].equalsIgnoreCase("for")) {
+                    hints.add("money");
+                    hints.add("for");
+                }
+                return hints;
+            }
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
